# deep-learning-from-scratch-5

./: .gitignore  CLAUDE.md  Cargo.toml  hello.py  pyproject.toml  requirements.txt
docs_memo/: claude_setup.md  rust部分の実行方法.md  uv初期化セットアップ.md
step07/: Cargo.toml  vae.py  vae_test.py
step07/src/: lib.rs  main.rs
