[project]
name = "dl-5-01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib==3.10.3",
    "numpy==2.3.0",
    "scipy==1.15.3",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "tqdm==4.67.1",
]

[tool.uv]
dev-dependencies = ["pytest>=8.4.0"]

[tool.pytest.ini_options]
python_functions = ["test_*"]
python_classes = ["Test*"]
python_files = ["test_*.py", "*_test.py"]
testpaths = ["."] # ここの行のサジェストを抑制  # copilot: disable
